# data

./: .env.example  .gitignore  README.md  pyproject.toml  standalone_data.py
baselines/: __init__.py  agentic_retry.py
baselines/icd_agentic_rag/: __init__.py  agent.py  config.py  single_case.py  tools.py
baselines/icd_rag/: __init__.py  azure_search.py  chunking.py  config.py  pipeline.py  single_case.py  single_case_icd_coding.ipynb
baselines/icd_react/: __init__.py  agent.py  config.py  runtime.py  single_case.py  single_case_debug.ipynb  tool_playground.ipynb  tools.md  tools.py
baselines/icd_react_v2/: __init__.py  agent.py  method.md  plan.md  single_case.ipynb  single_case.py  tool_playground.ipynb  tools.py
baselines/legal_agentic_rag/: __init__.py  agent.py  config.py  single_case.py  tools.py
baselines/legal_rag/: __init__.py  azure_search.py  chunking.py  config.py  pipeline.py  runtime.py  single_case.py  single_case_run.ipynb  title18_paths.py
baselines/legal_react_v2/: __init__.py  agent.py  config.py  method.md  plan.md  playground.ipynb  prompts.py  tools.py  (+3 more)
data/: README.md
manuals/: data-manual.md  experiment-reproduction-manual.md  mimic-manual.md
review_pipeline_v1/: __init__.py  agent.py  catalog_utils.py  plan.md  review_store.py  runtime.py  search_tools.py  single_case.py
scripts/: README.md  eval_logging.py  evaluate_icd_agentic_rag.py  evaluate_icd_rag.py  evaluate_icd_react_v2.py  evaluate_legal_agentic_rag.py  evaluate_legal_rag.py  evaluate_legal_react_v2_on_review_dataset.py  run_icd_chunking.py  run_legal_chunking.py
(+20 files in other folders)
