[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tam-data-reproduction"
version = "0.1.0"
description = "Standalone data and evaluation code for TAM experiments"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "azure-ai-formrecognizer==3.3.3",
    "azure-search-documents==11.6.0",
    "jinja2==3.1.6",
    "langchain==1.3.0",
    "langchain-openai==1.2.1",
    "langgraph==1.2.0",
    "langgraph-prebuilt==1.1.0",
    "langgraph-checkpoint==4.1.0",
    "loguru==0.7.3",
    "mlflow==3.10.0",
    "pandas==2.3.2",
    "pyarrow==20.0.0",
    "pypdf==5.9.0",
    "pyspark>=3.5,<3.6",
    "python-dotenv==1.1.1",
    "requests==2.32.3",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
]

[tool.setuptools]
py-modules = ["standalone_data"]

[tool.setuptools.packages.find]
include = ["baselines*", "review_pipeline_v1*"]